crates/kiln-config/tests/snapshots/valid__four-lines.snap
---
source: crates/kiln-config/tests/corpus.rs
expression: rendered
---
config_id: b3:cd02f1492d9ee29f43dc9ca95e19c9ce89c0351004f8bd3b9557d7ae7e948b6a


  boot: 
    initramfs: "dracut"
    loader: "grub2"
    timeout: 5
  files: {}
  hash_epoch: 8
  image: 
    arch: "[ARCH]"
    name: "system"
  kernel: 
    cmdline: 
      - "rw"
    dkms: {}
    dracut_modules: []
    modules: 
      blacklist: []
      initramfs: []
      load: []
      options: {}
    out_of_tree: {}
    package: "linux"
  local_digests: {}
  packages: 
    aur: {}
    build: []
    exclude: []
    file: {}
    repo: 
      - "base"
      - "dracut"
      - "efibootmgr"
      - "firefox"
      - "fish"
      - "grub"
      - "linux"
      - "linux-firmware"
      - "neovim"
      - "ostree"
      - "systemd-sysvcompat"
  repos: 
    extra: {}
    mirrors: []
    snapshot: 
      latest: true
  schema: 1
  scripts: {}
  system: 
    hostname: []
    keymap: "us"
    locale: 
      generate: []
      lang: "C.UTF-8"
    timezone: "UTC"
  systemd: 
    disable: []
    enable: 
      - "systemd-timesyncd.service"
    mask: []
    units: {}
