crates/kiln-config/tests/snapshots/valid__includer-overrides-entry.snap
---
source: crates/kiln-config/tests/corpus.rs
expression: rendered
---
config_id: b3:38d282ea7bc2f62f9189ec78337230de208d77cb342e1207ed29d42855ad2701


  boot: 
    initramfs: "dracut"
    loader: "grub2"
    timeout: 5
  files: 
    /etc/motd: 
      content: 
        - "from base\n"
      mode: 
        - 384
      source: []
      target: "/etc/motd"
  hash_epoch: 7
  image: 
    arch: "[ARCH]"
    name: "system"
  kernel: 
    cmdline: []
    dkms: {}
    dracut_modules: []
    headers: false
    modules: 
      blacklist: []
      initramfs: []
      load: []
      options: {}
    out_of_tree: {}
    package: "linux"
  local_digests: {}
  packages: 
    aur: {}
    build: []
    exclude: []
    file: {}
    repo: []
  repos: 
    extra: {}
    mirrors: []
    snapshot: 
      latest: true
  schema: 1
  scripts: {}
  system: 
    hostname: []
    keymap: "us"
    locale: 
      generate: []
      lang: "C.UTF-8"
    timezone: "UTC"
  systemd: 
    disable: []
    enable: []
    mask: []
    units: {}
