crates/kiln-config/tests/snapshots/valid__minimal.snap
---
source: crates/kiln-config/tests/corpus.rs
expression: rendered
---
config_id: b3:f85a4c2580bb4920ecfedf317ebd39ae8a41ea28483486534f28506898c7b7f5


  boot: 
    initramfs: "dracut"
    loader: "grub2"
    timeout: 5
  files: {}
  hash_epoch: 8
  image: 
    arch: "[ARCH]"
    name: "system"
  kernel: 
    cmdline: 
      - "rw"
    dkms: {}
    dracut_modules: []
    modules: 
      blacklist: []
      initramfs: []
      load: []
      options: {}
    out_of_tree: {}
    package: "linux"
  local_digests: {}
  packages: 
    aur: {}
    build: []
    exclude: []
    file: {}
    repo: 
      - "base"
      - "dracut"
      - "efibootmgr"
      - "grub"
      - "linux"
      - "linux-firmware"
      - "ostree"
      - "systemd-sysvcompat"
  repos: 
    extra: {}
    mirrors: []
    snapshot: 
      latest: true
  schema: 1
  scripts: {}
  system: 
    hostname: []
    keymap: "us"
    locale: 
      generate: []
      lang: "C.UTF-8"
    timezone: "UTC"
  systemd: 
    disable: []
    enable: 
      - "systemd-timesyncd.service"
    mask: []
    units: {}
