crates/kiln-config/tests/snapshots/valid__order-independence-a.snap
---
source: crates/kiln-config/tests/corpus.rs
expression: rendered
---
config_id: b3:028805bc2257ffae05310bc2380208ebbed63ce6783b3b8f1db6e7d14e103a79


  boot: 
    initramfs: "dracut"
    loader: "grub2"
    timeout: 5
  files: {}
  hash_epoch: 6
  image: 
    arch: "[ARCH]"
    name: "system"
  kernel: 
    cmdline: 
      - "quiet"
      - "rw"
    dkms: []
    dracut_modules: []
    headers: false
    modules: 
      blacklist: []
      initramfs: []
      load: []
      options: {}
    out_of_tree: {}
    package: "linux"
  local_digests: {}
  packages: 
    aur: {}
    build: []
    exclude: []
    file: {}
    repo: 
      - "alpha"
      - "beta"
      - "gamma"
  repos: 
    extra: {}
    mirrors: []
    snapshot: 
      latest: true
  schema: 1
  scripts: {}
  system: 
    hostname: []
    keymap: "us"
    locale: 
      generate: []
      lang: "C.UTF-8"
    timezone: "UTC"
  systemd: 
    disable: []
    enable: []
    mask: []
    units: {}
