crates/kiln-config/tests/snapshots/valid__order-independence-b.snap
---
source: crates/kiln-config/tests/corpus.rs
expression: rendered
---
config_id: b3:b990b4b53db7803e01a533c07c4584cc09ae9ebc78a88075137b537f3aeeaf6f


  boot: 
    initramfs: "dracut"
    loader: "grub2"
    timeout: 5
  files: {}
  hash_epoch: 8
  image: 
    arch: "[ARCH]"
    name: "system"
  kernel: 
    cmdline: 
      - "quiet"
      - "rw"
    dkms: {}
    dracut_modules: []
    modules: 
      blacklist: []
      initramfs: []
      load: []
      options: {}
    out_of_tree: {}
    package: "linux"
  local_digests: {}
  packages: 
    aur: {}
    build: []
    exclude: []
    file: {}
    repo: 
      - "alpha"
      - "beta"
      - "gamma"
  repos: 
    extra: {}
    mirrors: []
    snapshot: 
      latest: true
  schema: 1
  scripts: {}
  system: 
    hostname: []
    keymap: "us"
    locale: 
      generate: []
      lang: "C.UTF-8"
    timezone: "UTC"
  systemd: 
    disable: []
    enable: []
    mask: []
    units: {}
