crates/kiln-config/tests/snapshots/valid__url-checksum.snap
---
source: crates/kiln-config/tests/corpus.rs
expression: rendered
---
config_id: b3:e0cf98e52f187510124d6e43bc3f4f0448e1c913023b63320f7eb0cdc2376ddd


  boot: 
    initramfs: "dracut"
    loader: "grub2"
    timeout: 5
  files: {}
  hash_epoch: 8
  image: 
    arch: "[ARCH]"
    name: "system"
  kernel: 
    cmdline: 
      - "rw"
    dkms: {}
    dracut_modules: []
    modules: 
      blacklist: []
      initramfs: []
      load: []
      options: {}
    out_of_tree: {}
    package: "linux"
  local_digests: {}
  packages: 
    aur: {}
    build: []
    exclude: []
    file: 
      https://example.com/myapp-1.0-1-x86_64.pkg.tar.zst: 
        path: "https://example.com/myapp-1.0-1-x86_64.pkg.tar.zst"
        sha256: "https://example.com/myapp-1.0-1-x86_64.pkg.tar.zst.sha256"
    repo: 
      - "base"
      - "dracut"
      - "efibootmgr"
      - "grub"
      - "linux"
      - "linux-firmware"
      - "ostree"
      - "systemd-sysvcompat"
  repos: 
    extra: {}
    mirrors: []
    snapshot: 
      latest: true
  schema: 1
  scripts: {}
  system: 
    hostname: []
    keymap: "us"
    locale: 
      generate: []
      lang: "C.UTF-8"
    timezone: "UTC"
  systemd: 
    disable: []
    enable: 
      - "systemd-timesyncd.service"
    mask: []
    units: {}
