crates/kiln-config/tests/snapshots/valid__url-package.snap
---
source: crates/kiln-config/tests/corpus.rs
expression: rendered
---
config_id: b3:c40308d9f6ca5dd30609021b5b8e2ac15cf948dafe1edc1bc7a6841249a826a8


  boot: 
    initramfs: "dracut"
    loader: "grub2"
    timeout: 5
  files: {}
  hash_epoch: 8
  image: 
    arch: "[ARCH]"
    name: "system"
  kernel: 
    cmdline: 
      - "rw"
    dkms: {}
    dracut_modules: []
    modules: 
      blacklist: []
      initramfs: []
      load: []
      options: {}
    out_of_tree: {}
    package: "linux"
  local_digests: {}
  packages: 
    aur: {}
    build: []
    exclude: []
    file: 
      https://example.com/myapp-1.0-1-x86_64.pkg.tar.zst: 
        path: "https://example.com/myapp-1.0-1-x86_64.pkg.tar.zst"
        sha256: "f238df2ae16f95a3461bb262b8db52df5808bb03a6f2d85471442835bb31c65b"
    repo: 
      - "base"
      - "dracut"
      - "efibootmgr"
      - "grub"
      - "linux"
      - "linux-firmware"
      - "ostree"
      - "systemd-sysvcompat"
  repos: 
    extra: {}
    mirrors: []
    snapshot: 
      latest: true
  schema: 1
  scripts: {}
  system: 
    hostname: []
    keymap: "us"
    locale: 
      generate: []
      lang: "C.UTF-8"
    timezone: "UTC"
  systemd: 
    disable: []
    enable: 
      - "systemd-timesyncd.service"
    mask: []
    units: {}
